Bat files restart modes and cleanup plus removal of -XX:PermSize=XXXm (removed on java 8) MySqlConnector library update. removed safe strings (so much for nothing) removed unused import in olympiad stadium zone moved from SQLUtils get2DIntArray into territory dropped SQLUtils class Cleanup in DatabaseFactory removed mssql support